@@ -5,12 +5,9 @@ import com.eaio.uuid.UUID;
 public class UUIDGenerator {
 
 	private static UUIDGenerator INSTANCE;
-//	private long seed;
 	
-	private UUIDGenerator() {
-//		this.seed = 0;
-	}
-
+	private UUIDGenerator() {}
+	
 	public static UUIDGenerator getInstance() {
 		if(INSTANCE == null)
 			INSTANCE = new UUIDGenerator();
@@ -18,8 +15,7 @@ public class UUIDGenerator {
 	}
 
 	public Long getId() {
-//		return Long.valueOf(this.seed ++);
-		return new Long(new UUID().getClockSeqAndNode());
+		return Long.valueOf(new UUID().getClockSeqAndNode());
 	}
 	
 }
